--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "coderiq-wa-bot",
+  "name": "coderiq-bot",
   "version": "1.0.0",
-  "description": "WhatsApp AI Bot for CoderIQ.IN",
-  "main": "bot.js",
+  "description": "CoderIQ.IN AI Assistant",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@google/generative-ai": "^0.1.0",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "express": "^4.18.2",
+    "@google/generative-ai": "^0.1.0"
   }
 }
