--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coderiq-bot",
+  "name": "coderiq-groq-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,6 +7,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.1.0"
+    "groq-sdk": "^0.3.3"
   }
 }
